infrastructure/kubernetes/roles/network_policies/templates/cert-manager-namespace.yaml
---
# Cert Manager
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  endpointSelector: {}
  ingress:
    # From Kubernetes API server
    - fromEndpoints:
        - matchLabels:
            component: apiserver
            io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # Prometheus metrics
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
  egress:
    # DNS lookups (UDP)
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # DNS lookups (TCP)
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
    # ACME challenge verification
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
