infrastructure/kubernetes/roles/network_policies/templates/cert-manager.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  order: 80
  selector: all()
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow # exposing port 6443 for kubernetes api -> cert manager
      protocol: TCP
      source:
        namespaceSelector: app.kubernetes.io/instance == "default"
        selector: component == "apiserver"
      destination:
        ports: [6443, 443]
    - action: Allow # metrics
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == "prometheus"
        selector: all()
      destination:
        ports: [9402]
  egress:
    - action: Allow # DNS lookups
      protocol: UDP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow # DNS lookups (TCP)
      protocol: TCP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow # allowing ingress to talk to cert manager for ssl cert verification
      protocol: TCP
      destination: 
        nets:
          - 0.0.0.0/0
        ports: [80, 443]
