infrastructure/kubernetes/roles/network_policies/templates/cloudflare-tunnel-namespace.yaml
---
# Cloudflare Tunnel
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-tunnel
  namespace: cloudflare-tunnel
spec:
  endpointSelector: {}
  ingress:
    # Allow traffic from the Internet
    - fromEntities:
        - world
    # Prometheus metrics
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "20241"
              protocol: TCP
  egress:
    # DNS lookups (UDP)
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # DNS lookups (TCP)
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
    # QUIC connection to Cloudflare (TCP port 7844)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: TCP
    # QUIC connection to Cloudflare (UDP port 7844)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
    # QUIC ephemeral ports
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "32768"
              endPort: 65535
              protocol: UDP
    # HTTPS connections
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # cloudflare tunnel -> nginx
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
