infrastructure/kubernetes/roles/network_policies/templates/dex-server.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-network-policy
  namespace: argocd
spec:
  order: 80
  selector: app.kubernetes.io/name == "argocd-dex-server"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow # exposing dex http/https grPC endpoint
      protocol: TCP
      source:
        selector: app.kubernetes.io/name == "argocd-server"
      destination:
        ports: [5556, 5557]   
    
  egress:
    # === BASELINE RULES ===
    - action: Allow # DNS lookups
      protocol: UDP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow # DNS lookups (TCP)
      protocol: TCP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow # Kubernetes API access
      protocol: TCP
      destination:
        services:
          namespace: default
          name: kubernetes
    # === SPECIFIC RULES ===
    - action: Allow # Allowing ArgoCD dex to communicate with 3rd party authentication
      protocol: TCP
      destination:
        nets:
        - 0.0.0.0/0
        ports: [443]
