infrastructure/kubernetes/roles/network_policies/templates/repo-server.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: argocd-repo-server-network-policy
  namespace: argocd
spec:
  order: 80
  selector: "app.kubernetes.io/name == 'argocd-repo-server' ||
             app.kubernetes.io/name == 'argocd-repo-server-metrics'"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow # exposing ingress for argocd repo server application controller
      protocol: TCP
      source:
        namespaceSelector: "kubernetes.io/metadata.name == 'argocd' ||
                            kubernetes.io/metadata.name == 'frontend'"
        selector: "app.kubernetes.io/name == 'argocd-server' || 
                  app.kubernetes.io/name == 'argocd-application-controller' || 
                  app.kubernetes.io/name == 'argocd-applicationset-controller' ||
                  app.kubernetes.io/name == 'argocd-notifications-controller' ||
                  app.kubernetes.io/name == 'frontend'"
      destination:
        ports: [8081]
    - action: Allow # exposing ArgoCD repo server metrics endpoint
      protocol: TCP
      source: 
        namespaceSelector: kubernetes.io/metadata.name == "prometheus"
        selector: all()
      destination:
        ports: [8084]
  egress:
    - action: Allow # Allow DNS lookups
      protocol: UDP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow # Allow DNS lookups (TCP)
      protocol: TCP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow # Allowing ArgoCD repo server to communicate with Github to pull repo updates
      protocol: TCP
      destination:
        nets:
        - 0.0.0.0/0
        ports: [443, 22]
    - action: Allow # Allowing ArgoCD repo server -> redis for caching
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == "argocd-redis"
        ports: [6379]
