infrastructure/kubernetes/roles/network_policies/templates/server.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: argocd-server-network-policy
  namespace: argocd
spec:
  order: 80
  selector: "app.kubernetes.io/name == 'argocd-server' ||
             app.kubernetes.io/name == 'argocd-server-metrics'"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow # grPC + webUI for argocd server
      protocol: TCP
      destination:
        ports: [80, 443]
    - action: Allow # exposing ArgoCD server metrics endpoint
      protocol: TCP
      source: 
        namespaceSelector: projectcalico.org/name == "prometheus"
        selector: all()
      destination:
        ports: [8083]
  egress:
    - action: Allow # DNS lookups
      protocol: UDP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow # DNS lookups (TCP)
      protocol: TCP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow # Kubernetes API access
      protocol: TCP
      destination:
        services:
          namespace: default
          name: kubernetes
    - action: Allow # allowing argocd server -> argocd repo server for application state
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == "argocd-repo-server"
        ports: [8081]
    - action: Allow # allowing argocd server -> dex server for 3rd party authentication
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == "argocd-dex-server"
        ports: [5556, 5557]
    - action: Allow # allowing argocd server -> redis for HA caching
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == "argocd-redis"
        ports: [6379]
